Showing posts on homepage
Hiển thị bài đăng trên trang chủ

--- a/FitPortal/FitPortal/Areas/Admin/Views/Post/ManagePost.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Post/ManagePost.cshtml
@@ -33,19 +33,18 @@
                             @{
                                 foreach(var item in list)
                                 {
-                                                    <tr>
-                                                        <td>@item.PostName</td>
-                                                        <td>@item.CategoryName</td>
-                                                        <td>@item.DateCreated</td>
-                                                        <td>@item.UserCreate</td>
-                                                        <td>
-                                                            <input data-id="@item.Id" type="checkbox" class="js-switch" @Html.Raw(@item.IsDisplay == true ? "checked":"")/>
-                                                            @*<a href="#" class="btn-active" data-id="@item.Id">@(item.IsDisplay?"Show":"Hide")</a> *@  
-                                                        </td>
-                                                        <td>
-                                                            @Html.ActionLink("Xóa","DeletePost","Post",new{id = item.Id});
-                                                        </td>
-                                                    </tr>
+                                    <tr>
+                                        <td>@item.PostName</td>
+                                        <td>@item.CategoryName</td>
+                                        <td>@item.DateCreated</td>
+                                        <td>@item.UserCreate</td>
+                                        <td>
+                                            <input data-id="@item.Id" type="checkbox" class="js-switch" @Html.Raw(@item.IsDisplay == true ? "checked":"")/>
+                                        </td>
+                                        <td>
+                                            <a type="button" class="btn btn-round btn-info" href="/Admin/Post/DeletePost/@item.Id">Xóa</a>
+                                        </td>
+                                    </tr>
                                 }
                             }
                         
