Add Teacher View and controller
Thêm mới giảng viên và sửa giảng viên

--- a/FitPortal/FitPortal/Areas/Admin/Views/Post/ManagePost.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Post/ManagePost.cshtml
@@ -42,7 +42,7 @@
                                             <input data-id="@item.Id" type="checkbox" class="js-switch" @Html.Raw(@item.IsDisplay == true ? "checked":"")/>
                                         </td>
                                         <td>
-                                            <a type="button" class="btn btn-round btn-info" href="/Admin/Post/DeletePost/@item.Id">Xóa</a>
+                                            <a class="btn btn-round btn-info" href="/Admin/Post/DeletePost/@item.Id">Xóa</a>
                                         </td>
                                     </tr>
                                 }
