--- a/FitPortal/FitPortal/Views/Shared/_AdminLayout.cshtml
+++ b/FitPortal/FitPortal/Views/Shared/_AdminLayout.cshtml
@@ -98,6 +98,12 @@
                       <li><a href="calendar.html">Calendar</a></li>
                     </ul>
                   </li>
+                  <li><a><i class="fa fa-desktop"></i>Giảng viên<span class="fa fa-chevron-down"></span></a>
+                    <ul class="nav child_menu">
+                      <li><a asp-area="Admin" asp-controller="Teacher" asp-action="ViewAll">Thông tin giảng viên</a></li>
+                      <li><a href="media_gallery.html">Media Gallery</a></li>
+                    </ul>
+                  </li>
                   <li><a><i class="fa fa-table"></i> Tables <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a href="tables.html">Tables</a></li>
@@ -297,7 +303,6 @@
         <!-- /footer content -->
       </div>
     </div>
-
     <!-- jQuery -->
     <script src="/adminCustome/vendors/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap -->
