--- a/FitPortal/FitPortal/Areas/Admin/Views/Teacher/ViewAll.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Teacher/ViewAll.cshtml
@@ -15,15 +15,15 @@
     <table id="datatable" class="table table-striped table-bordered">
         <thead>
         <tr>
-            <th>Mã giảng viên</th>
-            <th>Tên giảng viên</th>
-            <th>Ảnh chân dung</th>
+            <th width="12%">Mã giảng viên</th>
+            <th width="12%">Tên giảng viên</th>
+            <th width="12%">Ảnh chân dung</th>
             <th>Số điện thoại</th>
             <th>Email</th>
             <th>Ngày sinh</th>
-            <th>Giới tính</th>
+            <th width="8%">Giới tính</th>
             <th>Địa chỉ</th>
-            <th>Thao tác</th>
+            <th width="12%">Thao tác</th>
         </tr>
         </thead>
         <tbody>
@@ -42,7 +42,9 @@
                         <td>@item.Gender</td>
                         <td>@item.Address</td>
                         <td>
-                            <a  class="btn btn-info" href="/admin/teacher/editteacher?IDTeacher=@item.Id">Sửa</a>
+                                <a  class="btn btn-round btn-info" href="/admin/teacher/editteacher?IDTeacher=@item.Id">Sửa</a>
+                                <span>|</span>
+                                <a  class="btn btn-round btn-danger" href="/admin/teacher/deleteteacher?IDTeacher=@item.Id">Xóa</a>
                         </td>
                         </tr>
                 }
