--- a/FitPortal/FitPortal/Views/UserAuthentication/ExternalLoginConfirmation.cshtml
+++ b/FitPortal/FitPortal/Views/UserAuthentication/ExternalLoginConfirmation.cshtml
@@ -68,7 +68,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-xs-12 col-sm-12">
-                                    <form name="loginForm" class="loginForm" asp-controller="UserAuthentication" asp-action="ExternalLoginConfirmation" asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post" role="form">
+                                    <form class="loginForm" asp-controller="UserAuthentication" asp-action="ExternalLoginConfirmation" method="post" role="form" asp-route-returnUrl="@ViewData["ReturnUrl"]">
                                         <div class="form-group">
                                             <input type="email" class="form-control email" asp-for="Email" placeholder="Mã số sinh viên hoặc giảng viên">
                                         </div>
@@ -81,7 +81,7 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            <button class="btn btn-lg btn-primary btn-block" type="submit">Đăng nhập</button>
+                                            <button class="btn btn-lg btn-primary btn-block" type="submit">Xác nhận</button>
                                         </div>
                                     </form>
                                 </div>
