--- a/FitPortal/FitPortal/Areas/Admin/Views/Post/AddPost.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Post/AddPost.cshtml
@@ -46,17 +46,17 @@
                           <textarea class="form-control col-md-7 col-xs-12" asp-for="@Model.Content" id="inputOfContent"></textarea>
                         </div>
                       </div>
-                      <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="">Ngày tạo<span class="required" >*</span>
-                        </label>
-                        <div class="col-md-6 col-sm-6 col-xs-12">
-                              <div class="col-md-11 xdisplay_inputx form-group has-feedback">
-                                <input type="text" asp-for="@Model.DateCreated" class="form-control has-feedback-left" id="single_cal1" aria-describedby="inputSuccess2Status">
-                                <span class="fa fa-calendar-o form-control-feedback left" aria-hidden="true"></span>
-                                <span id="inputSuccess2Status" class="sr-only">(success)</span>
-                              </div>
+                      <div class="col-md-6 col-sm-6 col-xs-12">
+                        <div class="form-group">
+                            <label class="control-label col-md-3 col-sm-3 col-xs-12" for="">Ngày tạo</label>
+                            <div class='input-group date' id='myDatepicker2'>
+                                <input asp-for="@Model.DateCreated" type='text' class="form-control" />
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-calendar"></span>
+                                </span>
+                            </div>
                         </div>
-                      </div>
+                    </div>
                     @if (TempData["msg"] != null)
                          {
                     <div class="form-group">
@@ -76,14 +76,16 @@
                     
                     @section DoanScript{
                         <script>
-                            //ClassicEditor
-                            //    .create(document.querySelector('#inputContent'))
-                            //    .catch( error => {console.error(error);});
                             ClassicEditor
                                 .create(document.querySelector('#inputOfContent'),
                                 {ckfinder: {uploadUrl: '/Admin/Post/UploadImage'}}
                                 )
                                 .then(editor => { window.editor = editor;})
                                 .catch(error => { console.error(error);});
+                        </script>
+                        <script>
+                            $('#myDatepicker2').datetimepicker({
+                                format: 'DD.MM.YYYY'
+                            });
                         </script>
                     }
