--- a/FitPortal/FitPortal/Views/Shared/_AdminLayout.cshtml
+++ b/FitPortal/FitPortal/Views/Shared/_AdminLayout.cshtml
@@ -96,20 +96,13 @@
                   <li><a><i class="fa fa-desktop"></i>Bài viết<span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a asp-area="Admin" asp-controller="Post" asp-action="ManagePost">Danh sách</a></li>
-                      <li><a href="media_gallery.html">Media Gallery</a></li>
-                      <li><a href="typography.html">Typography</a></li>
-                      <li><a href="icons.html">Icons</a></li>
-                      <li><a href="glyphicons.html">Glyphicons</a></li>
-                      <li><a href="widgets.html">Widgets</a></li>
-                      <li><a href="invoice.html">Invoice</a></li>
-                      <li><a href="inbox.html">Inbox</a></li>
-                      <li><a href="calendar.html">Calendar</a></li>
                     </ul>
                   </li>
                   <li><a><i class="fa fa-desktop"></i>Giảng viên<span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a asp-area="Admin" asp-controller="Teacher" asp-action="ViewAll">Danh sách</a></li>
                       <li><a asp-area="Admin" asp-controller="Teacher" asp-action="ViewResign">Danh sách về hưu</a></li>
+                      <li><a asp-area="Admin" asp-controller="Teacher" asp-action="TeacherPosition">Giảng viên&chuyên ngành</a></li>
                     </ul>
                   </li>
                   <li><a><i class="fa fa-table"></i> Chuyên ngành <span class="fa fa-chevron-down"></span></a>
@@ -118,13 +111,9 @@
                       <li><a href="tables_dynamic.html">Table Dynamic</a></li>
                     </ul>
                   </li>
-                  <li><a><i class="fa fa-bar-chart-o"></i> Data Presentation <span class="fa fa-chevron-down"></span></a>
+                  <li><a><i class="fa fa-bar-chart-o"></i> Lịch công tác <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                      <li><a href="chartjs.html">Chart JS</a></li>
-                      <li><a href="chartjs2.html">Chart JS2</a></li>
-                      <li><a href="morisjs.html">Moris JS</a></li>
-                      <li><a href="echarts.html">ECharts</a></li>
-                      <li><a href="other_charts.html">Other Charts</a></li>
+                      <li><a asp-area="Admin" asp-controller="Work" asp-action="ViewAll">Danh sách</a></li>
                     </ul>
                   </li>
                   <li><a><i class="fa fa-clone"></i>Layouts <span class="fa fa-chevron-down"></span></a>
