--- a/FitPortal/FitPortal/Areas/Admin/Views/Work/ViewAll.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Work/ViewAll.cshtml
@@ -32,6 +32,7 @@
                             <td>@item.LastModify</td>
                             <td>
                                 <a  class="btn btn-round btn-info" href="/admin/work/detailwork?IDWork=@item.Id">chi tiết</a>      
+                                <a  class="btn btn-round btn-info" href="/admin/work/detailwork?IDWork=@item.Id">Sửa</a>      
                             </td>
                         </tr>
                     }
