--- a/FitPortal/FitPortal/Views/Shared/_AdminLayout.cshtml
+++ b/FitPortal/FitPortal/Views/Shared/_AdminLayout.cshtml
@@ -114,6 +114,8 @@
                   <li><a><i class="fa fa-bar-chart-o"></i> Lịch công tác <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a asp-area="Admin" asp-controller="Work" asp-action="ViewAll">Danh sách</a></li>
+                      <li><a asp-area="Admin" asp-controller="Work" asp-action="WorkStatus">Trạng thái</a></li>
+                      <li><a asp-area="Admin" asp-controller="Work" asp-action="TeacherAssign">Lịch giảng viên</a></li>
                     </ul>
                   </li>
                   <li><a><i class="fa fa-clone"></i>Layouts <span class="fa fa-chevron-down"></span></a>
