--- a/FitPortal/FitPortal/Areas/Admin/Views/Work/TeacherAssign.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Work/TeacherAssign.cshtml
@@ -9,7 +9,7 @@
 @{
     Layout = "/Views/Shared/_AdminLayout.cshtml";
 }
-<h1>Quản lý chuyên ngành</h1>
+<h1>Quản lý lịch công tác giảng viên</h1>
 <!--Popup start-->
 <div class="modal" tabindex="-1" id="form-modal">
   <div class="modal-dialog">
