--- a/FitPortal/FitPortal/Views/Home/Index.cshtml
+++ b/FitPortal/FitPortal/Views/Home/Index.cshtml
@@ -39,7 +39,7 @@
                                 <img class="img-post" src="@item.Picture" alt="img">
                             </div>
                             <div class="media-body">
-                                <h6><a href="#">@item.Title</a></h6>
+                                <h6><a href="/viewpost/view?IDPost=@item.Id">@item.Title</a></h6>
                                 <div class="meta">
                                     <a href="#" class="author">
                                         Malika Hamira   
