--- a/FitPortal/FitPortal/Areas/Admin/Views/Work/WorkingSchedule.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Work/WorkingSchedule.cshtml
@@ -10,7 +10,7 @@
     Layout = "/Views/Shared/_AdminLayout.cshtml";
     string name = (string)ViewBag.TeacherName;
 }
-<h1>Lịch công tác của giảng viên @(name)</h1>
+<h1>Lịch công tác của giảng viên: @(name)</h1>
 <!--Popup start-->
 <div class="modal" tabindex="-1" id="form-modal">
   <div class="modal-dialog">
