--- a/FitPortal/FitPortal/Areas/Admin/Views/Specialization/ViewAll.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Specialization/ViewAll.cshtml
@@ -34,9 +34,9 @@
                             <td>@item.DateCreate</td>
                             <td>@item.ManagerName</td>
                             <td>
-                                <a  class="btn btn-round btn-info" href="/admin/specialization/editspecialization?IDSpecialization=@item.ID">Sửa</a>
+                                <a  class="btn btn-round btn-info" href="/admin/specialization/editspecialization?IDSpecialization=@item.ID"><i class="fa fa-edit"></a>
                                 <span>|</span>
-                                <a  class="btn btn-round btn-danger" href="/admin/teacher/deleteteacher?IDTeacher=@item.ID">Xóa</a>
+                                <a  class="btn btn-round btn-danger" href="/admin/teacher/deleteteacher?IDTeacher=@item.ID"><i class="fa fa-circle-o-notch"></a>
                             </td>
                         </tr>
                     }
