--- a/FitPortal/FitPortal/Areas/Admin/Views/Student/ViewAll.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Student/ViewAll.cshtml
@@ -5,11 +5,10 @@
 @using FitPortal.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
-@model List<FitPortal.Models.Domain.Students>
+@model List<FitPortal.Areas.Admin.Models.StudentViewModel>
 @{
     Layout = "/Views/Shared/_AdminLayout.cshtml";
 }
-<h1>Quản lý sinh viên</h1>
 <!--Popup start-->
 <div class="modal" tabindex="-1" id="form-modal">
   <div class="modal-dialog">
@@ -25,8 +24,13 @@
   </div>
 </div>
 <!--Popup end-->
+<h1>Quản lý sinh viên</h1>
 <a href="/admin/student/addstudent" class="btn btn-info">Thêm mới sinh viên</a>
     <div class="x_content">
+        @if(TempData["msg"]!=null)
+        {
+            <div class="text-danger">@TempData["msg"]</div>
+        }
         <table id="datatable" class="table table-striped table-bordered">
             <thead>
             <tr>
@@ -37,6 +41,7 @@
                 <th>Địa chỉ</th>
                 <th>SĐT</th>
                 <th>Email</th>
+                <td>Lớp</td>
                 <th>Thao tác</th>
             </tr>
             </thead>
@@ -47,16 +52,24 @@
                         foreach(var item in Model)
                         {
                             <tr>
-                                <td>@item.Name</td>
+                                <td>@item.StudentName</td>
                                 <td>@item.StudentCode</td>
                                 <td>@item.DayOfBirth</td>
                                 <td>@item.Gender</td>
                                 <td>@item.Address</td>
                                 <td>@item.PhoneNumber</td>
                                 <td>@item.Email</td>
+                                <td>@if(string.Compare(item.ClassName,"Not Have Class",true)==0)
+                                    {
+                                    <a onclick="showInPopup('@Url.Action("SetClass","Student",new{IDStudent=item.StudentId},Context.Request.Scheme)','Thêm lớp sinh viên')" class="btn btn-round btn-info">Thêm lớp</a>
+                                }else
+                                {
+                                    @item.ClassName
+                                }
+                                </td>
                                 <td>
-                                    <a href="/admin/student/editstudent?IDStudent=@item.Id" class="btn btn-round btn-info"><i class="fa fa-edit"></i></a>
-                                    <a href="/admin/student/deletestudent?IDStudent=@item.Id" class="btn btn-round btn-danger"><i class="fa fa-circle-o-notch"></i></a>
+                                    <a href="/admin/student/editstudent?IDStudent=@item.StudentId" class="btn btn-round btn-info"><i class="fa fa-edit"></i></a>
+                                    <a href="/admin/student/deletestudent?IDStudent=@item.StudentId" class="btn btn-round btn-danger"><i class="fa fa-circle-o-notch"></i></a>
                                 </td>
                             </tr>
                         }
